--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @charset   "UTF-8";
 body {
   background-color: gray;
+  background-image: url("images/bg.jpg");
+  background-size: cover;
 }
  
 #wrap {
@@ -12,6 +14,8 @@ body {
 header   {
   padding: 40px;
   height: 80px;
+  background-image: url("images/pattern.png");
+  background-repeat: repeat;
 }
  
 nav {
@@ -30,4 +34,8 @@ footer   {
   height: 40px;
   background-color : black;
   color: white;
+  background-image: url("images/logo.png");
+  background-repeat: no-repeat;
+  background-size: 200px 50px;
+  background-position: center bottom;
 }
